--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,16 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.11.0
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+
 flutter:
   uses-material-design: true
+  assets:
+    - assets/logo.png
