Updated README and launching widgets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.11.0
+  flutter_native_splash: ^2.2.15
+  scaffold_gradient_background: ^1.0.3+1 
   flutter_test:
     sdk: flutter
 
@@ -35,6 +37,10 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/logo.png"
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/logo.png
 
 flutter:
   uses-material-design: true
